--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -18,3 +18,7 @@
   </li>
 </ul>
 
+ -->
+
+<app-toolbar></app-toolbar>
+<router-outlet></router-outlet>
