added register function (UI+logic)

--- a/src/app/pages/register-page/register-page.component.scss
+++ b/src/app/pages/register-page/register-page.component.scss
@@ -17,7 +17,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     // background-image: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/videoblocks-particles-business-white-bright-glitter-bokeh-dust-abstract-background-loop_hsuwse_g_thumbnail-full01.png');
-    background-image: url("../../../assets/meeting.jpg");
+    background-color: rgba(4, 107, 97, 0.58);
     .card{
         margin: auto;
         width: 23em;
