--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -3,8 +3,8 @@
       <!-- <mat-card-header class="header"> -->
       <!-- </mat-card-header> -->
       <mat-card-content class="card-content">
-        <span class="login">Login</span>
-        <form #f="ngForm" class="form" (ngSubmit)="auth(f)"><br>
+        <span class="login">Create a New Account</span>
+        <form #f="ngForm" class="form" (ngSubmit)="register(f)"><br>
             <mat-form-field class="form-field">
                 <input matInput placeholder="Email" type="text" name="email" ngModel>
             </mat-form-field>
@@ -12,10 +12,13 @@
             <mat-form-field class="form-field">
                 <input matInput placeholder="Password" type="password" name="password" ngModel>
             </mat-form-field>
-            <a [routerLink]="['/register']" class="forgot-pwd">Forgot Password?</a>
+            <mat-form-field class="form-field">
+                <input matInput placeholder="Confirm Password" type="password" name="cfmPassword" ngModel>
+            </mat-form-field>
+            <!-- <a [routerLink]="['/register']" class="forgot-pwd">Forgot Password?</a> -->
             <br><br>
-            <button mat-raised-button class="login-btn" value="login">LOGIN</button><br><br>
-            <button mat-button [routerLink]="['/register']">Sign Up</button>
+            <button mat-raised-button class="login-btn" value="login">Sign Up</button><br><br>
+            <!-- <button mat-button [routerLink]="['/register']">Register</button> -->
             <span class="err"><small>{{errorMsg}}</small></span>
         </form >
       </mat-card-content>
