--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 body{
+    font-family: Open Sans, Arial, Helvetica, Verdana, sans-serif;
     margin: 0;
     padding: 0;
 }
