--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-toolbar *ngIf="isLoggedIn$ | async"> -->
+<!-- <mat-toolbar *ngIf="isLoggedIn$ | async">
 <mat-toolbar *ngIf="isLoggedIn">
   <mat-toolbar-row>
     <span>Third Line</span>
@@ -7,3 +7,32 @@
     <mat-icon class="example-icon">delete</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
+-->
+
+
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">1
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+</style>
+
+
+<!-- Top container -->
+<div *ngIf="isLoggedIn" class="w3-bar w3-top w3-black w3-large" style="z-index:4">
+  <!--<button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>-->
+  <span class="w3-bar-item">   Smart Metting Room   </span>
+  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-cog"></i></a>
+  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-envelope"></i></a>
+  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-user"></i></a>
+  <div style="margin-top: 5px">
+    <button class="w3-right" type="submit"><i class="fa fa-search"></i></button>
+    <input class="w3-right" type="text" placeholder="Search.." name="search">
+  </div>
+
+</div>
