commit list to grid view with error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-toolbar></app-toolbar>
 <router-outlet></router-outlet>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
