--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
@@ -11,28 +11,22 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
 <body class="w3-light-grey">
 
-<!-- Sidebar/menu -->
 
 <nav class="w3-sidebar w3-collapse w3-light-grey w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <button class="w3-button w3-black w3-circle w3-display-middle w3-ripple w3-padding-large" style="width:59%"><br><br><br><b> + New Event</b><br><br><br><br></button>
 </nav>
 
 
-<!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px;margin-top:43px;">
 
-  <!-- Header -->
   <header class="w3-container" style="padding-top:22px">
     <h5 style="display: inline"><b><i class="fa fa-calendar-check-o"></i> My Event</b></h5>
     <button class="w3-button w3-white w3-padding-large w3-hover-black w3-right" style="margin-bottom:22px"> + New Event</button>
   </header>
 
-  <!-- Event List -->
   <div class="w3-row-padding w3-margin-bottom">
-    <!-- Event 1 -->
     <div class="w3-quarter" style="margin-bottom:22px">
       <div class="w3-container w3-red w3-padding-16">
         <h3 style="text-align:center"><strong>Evenet 1</strong></h3>
@@ -44,7 +38,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
       </div>
     </div>
-    <!-- Event 2 -->
     <div class="w3-quarter" style="margin-bottom:22px">
       <div class="w3-container w3-blue w3-padding-16">
         <h3 style="text-align:center"><strong>Evenet 2</strong></h3>
@@ -56,7 +49,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
       </div>
     </div>
-    <!-- Event 3 -->
     <div class="w3-quarter" style="margin-bottom:22px">
       <div class="w3-container w3-teal w3-padding-16">
         <h3 style="text-align:center"><strong>Evenet 3</strong></h3>
@@ -68,7 +60,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
       </div>
     </div>
-    <!-- Event 4 -->
     <div class="w3-quarter" style="margin-bottom:22px">
       <div class="w3-container w3-orange w3-text-white w3-padding-16">
         <h3 style="text-align:center"><strong>Evenet 4</strong></h3>
@@ -80,7 +71,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
       </div>
     </div>
-    <!-- Event 5 -->
     <div class="w3-quarter" style="margin-bottom:22px">
       <div class="w3-container w3-teal w3-padding-16">
         <h3 style="text-align:center"><strong>Evenet 5</strong></h3>
@@ -93,44 +83,36 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
     </div>
   </div>
-
-
-
-  <!-- Footer -->
-  <!--
-  <footer class="w3-container w3-padding-16 w3-light-grey">
-    <h4>FOOTER</h4>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-  </footer>
-  -->
-
-  <!-- End page content -->
 </div>
-<!--
-<script>
-// Get the Sidebar
-var mySidebar = document.getElementById("mySidebar");
-
-// Get the DIV with overlay effect
-var overlayBg = document.getElementById("myOverlay");
-
-// Toggle between showing and hiding the sidebar, and add overlay effect
-function w3_open() {
-    if (mySidebar.style.display === 'block') {
-        mySidebar.style.display = 'none';
-        overlayBg.style.display = "none";
-    } else {
-        mySidebar.style.display = 'block';
-        overlayBg.style.display = "block";
-    }
-}
-
-// Close the sidebar with the close button
-function w3_close() {
-    mySidebar.style.display = "none";
-    overlayBg.style.display = "none";
-}
-</script>
--->
 </body>
 </html>
+ -->
+
+<!-- grid view -->
+<div class="grid" *ngIf="isGridView; else listView">
+  <mat-card *ngFor="let event of items.events" class="card">
+    <i class="material-icons event-icon">event</i>
+    <div class="event-title">{{event.name}}</div>
+    <table class="content">
+      <tr>
+        <th width="20%">date:</th>
+        <td width="80%">{{event.date}}</td>
+      </tr>
+      <tr>
+        <th>venue:</th>
+        <td>{{event.venue}}</td>
+      </tr>
+      <tr>
+        <th>Description:</th>
+        <td>{{event.description}}</td>
+      </tr>
+    </table>
+    <mat-card-actions class="foot"><i class="material-icons">delete</i>
+    </mat-card-actions>
+  </mat-card>
+</div>
+
+<!-- list view -->
+<ng-template #listView>
+<div class="list">this is list view</div>
+</ng-template>
