finished login&event-mgmt

--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -90,13 +90,17 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- grid view -->
 <div class="grid" *ngIf="isGridView; else listView">
-  <mat-card *ngFor="let event of items.events" class="card">
-    <i class="material-icons event-icon">event</i>
+  <mat-card *ngFor="let event of items.events" class="card"  >
+    <i class="material-icons event-icon" (click)="onSelect($event)" id="{{event.id}}">event</i>
     <div class="event-title">{{event.name}}</div>
     <table class="content">
       <tr>
-        <th width="20%">date:</th>
-        <td width="80%">{{event.date}}</td>
+        <th width="20%">id:</th>
+        <td width="80%">{{event.id}}</td>
+      </tr>
+      <tr>
+        <th>date:</th>
+        <td>{{event.date}}</td>
       </tr>
       <tr>
         <th>venue:</th>
@@ -107,9 +111,14 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <td>{{event.description}}</td>
       </tr>
     </table>
-    <mat-card-actions class="foot"><i class="material-icons">delete</i>
+    <mat-card-actions class="foot">
+      <!-- <i class="material-icons">create</i> -->
+      <i class="material-icons">delete</i>
     </mat-card-actions>
   </mat-card>
+  <div class="add-event" [routerLink]="['/add-event']">
+    <div class="plus">+</div>
+  </div>
 </div>
 
 <!-- list view -->
