moved list/grid transaction from toolbar to home page

--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -89,7 +89,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
  -->
 
 <!-- grid view -->
-<div class="grid" *ngIf="isGridView; else listView">
+<div class="top-btn" *ngIf="page == '/event-mgmt'" (click)="changeView()">
+  <i class="material-icons">{{view_icon}}</i>
+  <p class="btn-name">{{view_name}}</p>
+</div>
+<div class="grid" *ngIf="isGrid; else listView">
   <mat-card *ngFor="let event of items.events" class="card"  >
     <i class="material-icons event-icon" (click)="onSelect($event)" id="{{event.id}}">event</i>
     <div class="event-title">{{event.name}}</div>
@@ -123,5 +127,49 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- list view -->
 <ng-template #listView>
-<div class="list">this is list view</div>
+  <div class="list">
+    this is list view page
+  </div>
+  <!--
+  <div class="list">
+    <mat-table #table [dataSource]="dataSource">
+
+      <!-- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column ->
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+      </ng-container>
+
+      <!-- Name Column ->
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+      </ng-container>
+
+      <!-- Weight Column ->
+      <ng-container matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
+      </ng-container>
+
+      <!-- Symbol Column ->
+      <ng-container matColumnDef="venue">
+        <mat-header-cell *matHeaderCellDef> Venue </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+      </ng-container>
+
+      <!-- Symbol Column ->
+      <ng-container matColumnDef="description">
+        <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+      </ng-container>
+
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </div>
+-->
 </ng-template>
