login page updated

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -4,42 +4,14 @@
   <img class="logo" src="assets/viatick.png">
   <span class="title">Smart Meeting Room</span>
   <span class="example-spacer"></span>
-  <!--
+
   <div class="top-btn" *ngIf="page == '/event-mgmt'" (click)="changeView()">
     <i class="material-icons">{{view_icon}}</i>
     <p class="btn-name">{{view_name}}</p>
   </div>
-   -->
-  <div class="top-btn">
+
+  <!-- <div class="top-btn">
     <i class="material-icons">account_circle</i>
     <p class="btn-name">Account</p>
-  </div>
+  </div> -->
 </mat-toolbar>
-
-
-
-<!-- <!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">1
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-</style>
-
-
-<div *ngIf="isLoggedIn" class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-  <span class="w3-bar-item">   Smart Metting Room   </span>
-  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-cog"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-envelope"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-user"></i></a>
-  <div style="margin-top: 5px">
-    <button class="w3-right" type="submit"><i class="fa fa-search"></i></button>
-    <input class="w3-right" type="text" placeholder="Search.." name="search">
-  </div>
-
-</div>
- -->
