--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,25 +1,41 @@
 <div class="login-page">
-    <mat-card class="card">
-      <!-- <mat-card-header class="header"> -->
-      <!-- </mat-card-header> -->
-      <mat-card-content class="card-content">
-        <span class="login">Login</span>
-        <form #f="ngForm" class="form" (ngSubmit)="auth(f)"><br>
-            <mat-form-field class="form-field">
-                <input matInput placeholder="Email" type="text" name="email" ngModel>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="form-field">
-                <input matInput placeholder="Password" type="password" name="password" ngModel>
-            </mat-form-field>
-            <a [routerLink]="['/register']" class="forgot-pwd">Forgot Password?</a>
-            <br><br>
-            <button mat-raised-button class="login-btn" value="login">LOGIN</button><br><br>
-            <button mat-button [routerLink]="['/register']">Sign Up</button>
-            <span class="err"><small>{{errorMsg}}</small></span>
-        </form >
-      </mat-card-content>
-      <!-- <mat-card-actions> -->
-      <!-- </mat-card-actions> -->
-    </mat-card>
+  <div class="card">
+    <mat-icon class="icon">person</mat-icon>
+    <form (submit) = "login()">
+
+
+    <mat-form-field class="email-field" appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Your Email"
+                      [(ngModel)] = "account.email"
+                      [formControl]="formControl.email"
+                      required />
+      <mat-icon matSuffix>email</mat-icon>
+      <mat-error *ngIf="formControl.email.hasError('email') && !formControl.email.hasError('required')">
+        Please enter a valid email address
+      </mat-error>
+      <mat-error *ngIf="formControl.email.hasError('required')">
+        Email is required
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="pwd-field" appearance="outline">
+      <mat-label>Password</mat-label>
+      <input matInput placeholder="Password"
+                      type="password"
+                      [(ngModel)] = "account.password"
+                      [formControl]="formControl.password"
+                      required/>
+      <mat-icon matSuffix>vpn_key</mat-icon>
+      <mat-error *ngIf="formControl.password.hasError('required')">
+        Password secret is required
+      </mat-error>
+    </mat-form-field>
+    <div class="hint">
+      <div class="left" [routerLink]="['/register']">Sign up</div>
+      <div class="right">Forget password</div>
+    </div>
+    <button mat-stroked-button class="button" type="submit">Enter</button>
+    </form>
+  </div>
+
 </div>
