--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,9 +1,9 @@
 :host{
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .login-page{
@@ -11,36 +11,70 @@
     position: relative;
     height: 100%;
     width: 100%;
+    display: flex;
+    /* style background */
+    // background: linear-gradient(to top, #bfffb3,#cff8a4,#dff195,#efe986,#ffe277);
+    // background: linear-gradient(to bottom, #59D2FE,#44E5E7);
+    // background: linear-gradient(to bottom, #59D2FE,#87F1FF,#60E1E0);
+    background-image: url(assets/background.jpg);
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    // background-image: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/PDaTSuJ/videoblocks-particles-business-white-bright-glitter-bokeh-dust-abstract-background-loop_hsuwse_g_thumbnail-full01.png');
-    background-image: url("../../../assets/meeting.jpg");
     .card{
         margin: auto;
-        width: 23em;
-        top: 27%;
-        .login{
-            font-size: 1.5em;
+        width: 300px;
+        height:400px;
+        text-align: center;
+        color: #335C67;
+        .icon{
+          font-size: 5em;
+          width:100%;
+          height: 1.15em;
+          }
+        .email-field,
+        .pwd-field{
+          // text-align: center;
+          font-weight: 300;
         }
-        .forgot-pwd{
-            color: gray;
-            text-decoration: none;
-            font-weight: 200;
-            font-size: 0.9em;
-            float: right;
+        .hint{
+          display: flex;
+          width: 80%;
+          margin: 0.5em auto 1em auto;
+          font-size: 0.7em;
+          color: whitesmoke;
+          .left{
+            flex: 1;
+            cursor: pointer;
+          }
+          .right{
+            flex: 1;
+            cursor: pointer;
+          }
         }
-        .form-field{
-            display: block;
+        .button{
+          margin: 14px;
+          width: 10em;
+          border-radius: 4em;
+          background-color: #335C67;
+          color: whitesmoke;
         }
-        .login-btn{
-            width: 100%;
-        }
-        .err{
-            color: red;
-            float: right;
-        }
-    }
-}
+      }
+        // .login{
+        //     font-size: 1.5em;
+        // }
+        // .forgot-pwd{
+        //     color: gray;
+        //     text-decoration: none;
+        //     font-weight: 200;
+        //     font-size: 0.9em;
+        //     float: right;
+        // }
+        // .form-field{
+        //     display: block;
+        // }
+        // .login-btn{
+        //     width: 100%;
+        // }
+        // .err{
+        //     color: red;
+        //     float: right;
+        // }
+      }
