--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -29,8 +29,8 @@
       </mat-error>
     </mat-form-field>
     <div class="hint">
-      <div class="left" [routerLink]="['/register']">Sign up</div>
-      <div class="right">Forget password</div>
+      <div class="left" [routerLink]="['/register']">Sign up?</div>
+      <!-- <div class="right">Forget password</div> -->
     </div>
     <button mat-stroked-button class="button" type="submit">Enter</button>
     </form>
