connection problem while continue

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,14 +1,13 @@
  <!-- <mat-toolbar *ngIf="isLoggedIn$ | async"> -->
 <!-- <mat-toolbar *ngIf="isLoggedIn"> -->
 <mat-toolbar class="toolbar">
-  <img class="logo" src="assets/viatick.png">
-  <span class="title">Smart Meeting Room</span>
+  <span class="title">Smart Event</span>
   <span class="example-spacer"></span>
 
-  <div class="top-btn" *ngIf="page == '/event-mgmt'" (click)="changeView()">
+  <!-- <div class="top-btn" *ngIf="page == '/event-mgmt'" (click)="changeView()">
     <i class="material-icons">{{view_icon}}</i>
     <p class="btn-name">{{view_name}}</p>
-  </div>
+  </div> -->
 
   <!-- <div class="top-btn">
     <i class="material-icons">account_circle</i>
