--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -5,6 +5,7 @@
         <input matInput placeholder="Your Email"
                         [(ngModel)] = "account.email"
                         [formControl]="formControl.email"
+                        type = "text"
                         required />
         <mat-icon matSuffix>email</mat-icon>
         <mat-error *ngIf="formControl.email.hasError('email') && !formControl.email.hasError('required')">
@@ -18,6 +19,7 @@
         <input matInput placeholder="Username"
                         [(ngModel)] = "account.username"
                         [formControl]="formControl.username"
+                        type = "text"
                         required />
         <mat-icon matSuffix>local_offer</mat-icon>
         <mat-error *ngIf="formControl.username.hasError('required')">
@@ -49,7 +51,7 @@
       <div class="hint">
         <div class="left" [routerLink]="['/login']">Login?</div>
       </div>
-      <button mat-stroked-button class="button" type="submit">Create</button>
+      <button mat-stroked-button class="button" type="button" (click)="register()">Create</button>
     </form>
   </div>
 </div>
