foundation of connection

--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -3,6 +3,7 @@
   <i class="material-icons">view_list</i>
   <p class="btn-name">{{view_name}}</p>
 </div> -->
+<app-toolbar></app-toolbar>
 <button mat-icon-button (click) = "changeView()">
   <mat-icon>{{view_icon}}</mat-icon>
 </button>
