--- a/src/app/pages/register-page/register-page.component.scss
+++ b/src/app/pages/register-page/register-page.component.scss
@@ -27,7 +27,7 @@
         .email-field,
         .username-field
         .pwd-field{
-          font-weight: 300;
+          // font-weight: 300;
         }
         .hint{
           display: flex;
