--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
  <!-- <mat-toolbar *ngIf="isLoggedIn$ | async"> -->
 <!-- <mat-toolbar *ngIf="isLoggedIn"> -->
 <mat-toolbar class="toolbar">
-  <span class="title">Smart Event</span>
-  <span class="example-spacer"></span>
+  <div class="title">Smart Meeting</div>
+  <div class="example-spacer"></div>
 
   <!-- <div class="top-btn" *ngIf="page == '/event-mgmt'" (click)="changeView()">
     <i class="material-icons">{{view_icon}}</i>
@@ -13,4 +13,16 @@
     <i class="material-icons">account_circle</i>
     <p class="btn-name">Account</p>
   </div> -->
+  <mat-menu></mat-menu>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon class="profile-icon">perm_identity</mat-icon>
+    <div>
+      {{account.username}}
+    </div>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>My Profile</button>
+    <button mat-menu-item>Log out</button>
+  </mat-menu>
+
 </mat-toolbar>
