--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -2,23 +2,20 @@
 <!-- <mat-toolbar *ngIf="isLoggedIn"> -->
 <mat-toolbar class="toolbar">
   <div class="title">Smart Meeting</div>
-  <div class="example-spacer"></div>
-
-  <!-- <div class="top-btn" *ngIf="page == '/event-mgmt'" (click)="changeView()">
-    <i class="material-icons">{{view_icon}}</i>
-    <p class="btn-name">{{view_name}}</p>
-  </div> -->
-
-  <!-- <div class="top-btn">
-    <i class="material-icons">account_circle</i>
-    <p class="btn-name">Account</p>
-  </div> -->
-  <mat-menu></mat-menu>
+  <div class="front-spacer"></div>
+  <div class="searchBar">
+    <mat-icon class="icon">search</mat-icon>
+      <input matInput class="input" placeholder="Search Event Name" [(ngModel)]= "searchEventText"/>
+  </div>
+  <div class="end-spacer"></div>
+  <button mat-icon-button (click) = "changeView()">
+    <mat-icon>{{viewIcon}}</mat-icon>
+  </button>
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon class="profile-icon">perm_identity</mat-icon>
-    <div>
+    <!-- <div>
       {{account.username}}
-    </div>
+    </div> -->
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item>My Profile</button>
