--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  home-page works!
-</p>
+<app-toolbar [pageName] = "pageName"></app-toolbar>
+<mat-sidenav-container>
+  <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
+  <mat-sidenav-content>Main content</mat-sidenav-content>
+</mat-sidenav-container>
