--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -32,7 +32,7 @@
       <div class="left" [routerLink]="['/register']">Sign up?</div>
       <!-- <div class="right">Forget password</div> -->
     </div>
-    <button mat-stroked-button class="button" type="submit">Enter</button>
+    <button mat-stroked-button class="button" type="submit" (click)="login()">Enter</button>
     </form>
   </div>
 
